add full path not just ~

--- a/how-to-create-this-site.html
+++ b/how-to-create-this-site.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2015-09-02 Wed 15:15 -->
+<!-- 2015-09-02 Wed 15:17 -->
 <meta  http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta  name="viewport" content="width=device-width, initial-scale=1" />
 <title>How to create this site using org mode</title>
@@ -215,7 +215,7 @@ Link: <a href="https://github.com/fniessen/org-html-themes">https://github.com/f
 <div class="outline-text-3" id="text-3-2">
 <div class="org-src-container">
 
-<pre class="src src-org">#+SETUPFILE: ~/Devel/org-html-themes/setup/theme-readtheorg.setup
+<pre class="src src-org">#+SETUPFILE: /path/to/org-html-themes/setup/theme-readtheorg.setup
 #+TITLE: Title of my Org file
 </pre>
 </div>
