--- a/design.html
+++ b/design.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2015-09-11 Fri 11:40 -->
+<!-- 2015-09-14 Mon 08:50 -->
 <meta  http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta  name="viewport" content="width=device-width, initial-scale=1" />
 <title>On Design</title>
@@ -158,8 +158,13 @@ for the JavaScript code in this tag.
 <li><a href="#orgheadline2">2. Articles</a></li>
 <li><a href="#orgheadline3">3. Courses</a></li>
 <li><a href="#orgheadline4">4. Communities</a></li>
-<li><a href="#orgheadline5">5. Colors</a></li>
-<li><a href="#orgheadline6">6. Business side of design</a></li>
+<li><a href="#orgheadline7">5. Tools</a>
+<ul>
+<li><a href="#orgheadline5">5.1. Wirify</a></li>
+<li><a href="#orgheadline6">5.2. Colors</a></li>
+</ul>
+</li>
+<li><a href="#orgheadline8">6. Business side of design</a></li>
 </ul>
 </div>
 </div>
@@ -213,10 +218,24 @@ Design for non designers
 </div>
 </div>
 
-
-<div id="outline-container-orgheadline5" class="outline-2">
-<h2 id="orgheadline5"><span class="section-number-2">5</span> Colors</h2>
+<div id="outline-container-orgheadline7" class="outline-2">
+<h2 id="orgheadline7"><span class="section-number-2">5</span> Tools</h2>
 <div class="outline-text-2" id="text-5">
+</div><div id="outline-container-orgheadline5" class="outline-3">
+<h3 id="orgheadline5"><span class="section-number-3">5.1</span> Wirify</h3>
+<div class="outline-text-3" id="text-5-1">
+<p>
+Turn an existing site into a wireframe
+</p>
+<ul class="org-ul">
+<li><a href="http://www.wirify.com/">http://www.wirify.com/</a></li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-orgheadline6" class="outline-3">
+<h3 id="orgheadline6"><span class="section-number-3">5.2</span> Colors</h3>
+<div class="outline-text-3" id="text-5-2">
 <ul class="org-ul">
 <li><a href="http://www.colourlovers.com/">http://www.colourlovers.com/</a></li>
 <li><a href="http://www.colourlovers.com/palettes">http://www.colourlovers.com/palettes</a></li>
@@ -228,10 +247,11 @@ Design for non designers
 </ul>
 </div>
 </div>
+</div>
 
 
-<div id="outline-container-orgheadline6" class="outline-2">
-<h2 id="orgheadline6"><span class="section-number-2">6</span> Business side of design</h2>
+<div id="outline-container-orgheadline8" class="outline-2">
+<h2 id="orgheadline8"><span class="section-number-2">6</span> Business side of design</h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li><a href="https://creativeclass.io/">https://creativeclass.io/</a></li>
