--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2015-09-11 Fri 11:41 -->
+<!-- 2015-09-14 Mon 09:00 -->
 <meta  http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta  name="viewport" content="width=device-width, initial-scale=1" />
 <title>Notes</title>
@@ -179,6 +179,11 @@ for the JavaScript code in this tag.
 
 <ul class="org-ul">
 <li><a href="design.html">design.html</a></li>
+</ul>
+
+
+<ul class="org-ul">
+<li><a href="git-cheat-sheet.html">git-cheat-sheet.html</a></li>
 </ul>
 </div>
 </body>
