--- a/freebsd.html
+++ b/freebsd.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2015-09-08 Tue 15:59 -->
+<!-- 2015-09-21 Mon 18:27 -->
 <meta  http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta  name="viewport" content="width=device-width, initial-scale=1" />
 <title>freebsd notes</title>
@@ -94,12 +94,12 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   /*]]>*/-->
 </style>
-<link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/htmlize.css"/>
-<link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/readtheorg.css"/>
+<link rel="stylesheet" type="text/css" href="styles/readtheorg/css/htmlize.css"/>
+<link rel="stylesheet" type="text/css" href="styles/readtheorg/css/readtheorg.css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="http://www.pirilampo.org/styles/lib/js/jquery.stickytableheaders.js"></script>
-<script type="text/javascript" src="http://www.pirilampo.org/styles/readtheorg/js/readtheorg.js"></script>
+<script type="text/javascript" src="styles/lib/js/jquery.stickytableheaders.min.js"></script>
+<script type="text/javascript" src="styles/readtheorg/js/readtheorg.js"></script>
 <script type="text/javascript">
 /*
 @licstart  The following is the entire license notice for the
@@ -207,7 +207,8 @@ for the JavaScript code in this tag.
 <li><a href="#orgheadline37">8.1. Create ip address for jail</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline39">9. References</a></li>
+<li><a href="#orgheadline39">9. Jenkins</a></li>
+<li><a href="#orgheadline40">10. References</a></li>
 </ul>
 </div>
 </div>
@@ -803,8 +804,22 @@ To enable networking inside jail, copy the resolv.conf file
 
 
 <div id="outline-container-orgheadline39" class="outline-2">
-<h2 id="orgheadline39"><span class="section-number-2">9</span> References</h2>
+<h2 id="orgheadline39"><span class="section-number-2">9</span> Jenkins</h2>
 <div class="outline-text-2" id="text-9">
+<ul class="org-ul">
+<li><p>
+<a href="https://wiki.jenkins-ci.org/display/JENKINS/FreeBSD">https://wiki.jenkins-ci.org/display/JENKINS/FreeBSD</a>
+</p>
+
+<p>
+Setting up Jenkins on freebsd
+</p></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-orgheadline40" class="outline-2">
+<h2 id="orgheadline40"><span class="section-number-2">10</span> References</h2>
+<div class="outline-text-2" id="text-10">
 <hr  />
 <ul class="org-ul">
 <li><a href="http://www.bsdnow.tv/tutorials/jails">http://www.bsdnow.tv/tutorials/jails</a></li>
