Update color meanings

--- a/design.html
+++ b/design.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2015-09-14 Mon 08:50 -->
+<!-- 2015-09-22 Tue 12:07 -->
 <meta  http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta  name="viewport" content="width=device-width, initial-scale=1" />
 <title>On Design</title>
@@ -164,7 +164,12 @@ for the JavaScript code in this tag.
 <li><a href="#orgheadline6">5.2. Colors</a></li>
 </ul>
 </li>
-<li><a href="#orgheadline8">6. Business side of design</a></li>
+<li><a href="#orgheadline9">6. Colors</a>
+<ul>
+<li><a href="#orgheadline8">6.1. Cheat Sheet</a></li>
+</ul>
+</li>
+<li><a href="#orgheadline10">7. Business side of design</a></li>
 </ul>
 </div>
 </div>
@@ -250,9 +255,33 @@ Turn an existing site into a wireframe
 </div>
 
 
-<div id="outline-container-orgheadline8" class="outline-2">
-<h2 id="orgheadline8"><span class="section-number-2">6</span> Business side of design</h2>
+<div id="outline-container-orgheadline9" class="outline-2">
+<h2 id="orgheadline9"><span class="section-number-2">6</span> Colors</h2>
 <div class="outline-text-2" id="text-6">
+</div><div id="outline-container-orgheadline8" class="outline-3">
+<h3 id="orgheadline8"><span class="section-number-3">6.1</span> Cheat Sheet</h3>
+<div class="outline-text-3" id="text-6-1">
+<ul class="org-ul">
+<li>Red: Passion, Love, Anger</li>
+<li>Orange: Energy, Happiness, Vitality</li>
+<li>Yellow: Happiness, Hope, Deceit</li>
+<li>Green: New Beginnings, Abundance, Nature</li>
+<li>Blue: Calm, Responsible, Sadness</li>
+<li>Purple: Creativity, Royalty, Wealth</li>
+<li>Black: Mystery, Elegance, Evil</li>
+<li>Gray: Moody, Conservative, Formality</li>
+<li>White: Purity, Cleanliness, Virtue</li>
+<li>Brown: Nature, Wholesomeness, Dependability</li>
+<li>Tan or Beige: Conservative, Piety, Dull</li>
+<li>Cream or Ivory: Calm, Elegant, Purity</li>
+</ul>
+</div>
+</div>
+</div>
+
+<div id="outline-container-orgheadline10" class="outline-2">
+<h2 id="orgheadline10"><span class="section-number-2">7</span> Business side of design</h2>
+<div class="outline-text-2" id="text-7">
 <ul class="org-ul">
 <li><a href="https://creativeclass.io/">https://creativeclass.io/</a></li>
 
